# kde2-kio-sftp

./: CMakeLists.txt  kio_sftp.cpp  kio_sftp.txt  ksshprocess.cpp  process.cpp  process.h  sftpfileattr.h
